--- a/static/keyword-spotting.html
+++ b/static/keyword-spotting.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>JavaScript Speech Recognition - Keyword Spotting Demo</title>
+    <title>DEMO</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
@@ -145,7 +145,7 @@
     </script>
 
 
-    <div class="section">
+  <!--  <div class="section">
         <div class="container" style="margin-top: 5%">
             <h1 class="section-heading">JsSpeechRecognizer - Keyword Spotting</h1>
             <p class="section-description">JavaScript Speech Recognition Keyword Spotting Demo</p>
@@ -156,12 +156,12 @@
                 <li>For more detailed instructions, click <a href="https://github.com/dreamdom/JsSpeechRecognizer/tree/master/demos/keyword-spotting/">here</a>.</li>
             </ol>
 
-        </div>
+        </div> 
         <textarea name='jsontext' id='jsontext'></textarea>
-    </div>
+    </div> -->
 
     <div class="container">
-        <div class="row" style="margin-top: 5%">
+      <!--  <div class="row" style="margin-top: 5%">
             <div class="one-half column">
                 <h2>Training</h2>
                 <div>
@@ -171,7 +171,7 @@
 
                 <div id="resultsDiv">
                 </div>
-            </div>
+            </div> -->
 
             <div class="one-half column">
                 <h2>Testing</h2>
