--- a/static/keyword-spotting.html
+++ b/static/keyword-spotting.html
@@ -161,7 +161,7 @@
     </div> -->
 
     <div class="container">
-      <!--  <div class="row" style="margin-top: 5%">
+        <div class="row" style="margin-top: 5%">
             <div class="one-half column">
                 <h2>Training</h2>
                 <div>
@@ -171,7 +171,7 @@
 
                 <div id="resultsDiv">
                 </div>
-            </div> -->
+            </div> 
 
             <div class="one-half column">
                 <h2>Testing</h2>
