--- a/static/keyword-spotting.html
+++ b/static/keyword-spotting.html
@@ -145,7 +145,7 @@
     </script>
 
 
-  <!--  <div class="section">
+    <div class="section">
         <div class="container" style="margin-top: 5%">
             <h1 class="section-heading">JsSpeechRecognizer - Keyword Spotting</h1>
             <p class="section-description">JavaScript Speech Recognition Keyword Spotting Demo</p>
@@ -158,7 +158,7 @@
 
         </div> 
         <textarea name='jsontext' id='jsontext'></textarea>
-    </div> -->
+    </div>
 
     <div class="container">
         <div class="row" style="margin-top: 5%">
