--- a/static/keyword-spotting.html
+++ b/static/keyword-spotting.html
@@ -50,7 +50,7 @@
 
                     // Update the UI and re-enable testing button
                     $("#startStopRecordingButton").val("start training");
-                    document.getElementById("testingStartStopRecordingButton").disabled = false;
+                   // document.getElementById("testingStartStopRecordingButton").disabled = false;
                     
 
                     // Append to the results area
