--- a/static/keyword-spotting.html
+++ b/static/keyword-spotting.html
@@ -95,7 +95,7 @@
                    //  speechRec.startKeywordSpottingNoisyRecording();
                 } else {
                     $("#testingStartStopRecordingButton").val("start testing");
-                    document.getElementById("startStopRecordingButton").disabled = false;
+                  //  document.getElementById("startStopRecordingButton").disabled = false;
                     
                     speechRec.stopRecording();
                 }
