--- a/static/keyword-spotting.html
+++ b/static/keyword-spotting.html
@@ -89,13 +89,13 @@
                 if (!speechRec.isRecording()) {
                     // Update the UI and prevent the training button from being pressed
                     $("#testingStartStopRecordingButton").val("stop testing");
-                    document.getElementById("startStopRecordingButton").disabled = true;
+                  //  document.getElementById("startStopRecordingButton").disabled = true;
                     
                     speechRec.startKeywordSpottingRecording();
-                    speechRec.startKeywordSpottingNoisyRecording();
+                   //  speechRec.startKeywordSpottingNoisyRecording();
                 } else {
                     $("#testingStartStopRecordingButton").val("start testing");
-                   document.getElementById("startStopRecordingButton").disabled = false;
+                  //  document.getElementById("startStopRecordingButton").disabled = false;
                     
                     speechRec.stopRecording();
                 }
@@ -146,7 +146,7 @@
     </script>
 
 
-   <div class="section">
+ <!--   <div class="section">
         <div class="container" style="margin-top: 5%">
             <h1 class="section-heading">JsSpeechRecognizer - Keyword Spotting</h1>
             <p class="section-description">JavaScript Speech Recognition Keyword Spotting Demo</p>
@@ -159,9 +159,9 @@
 
         </div> 
         <textarea name='jsontext' id='jsontext'></textarea>
-    </div>
+    </div> -->
 
-  <div class="container">
+  <!--  <div class="container">
         <div class="row" style="margin-top: 5%">
             <div class="one-half column">
                 <h2>Training</h2>
@@ -173,7 +173,7 @@
                 <div id="resultsDiv">
                 </div>
             </div> 
-
+-->
             <div class="one-half column">
                 <h2>Testing</h2>
                 <div>
