--- a/static/200.html
+++ b/static/200.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>JavaScript Speech Recognition - Keyword Spotting Demo</title>
+    <title>Keyword Spotting Demo</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
